corpus/expr/importExpr.txt
================================================================================
importExpr
================================================================================

foo = import*("*.txt")

--------------------------------------------------------------------------------

(module
  (classProperty
    (identifier)
    (importGlobExpr
      (stringConstant
        (slStringLiteralPart)))))
