corpus/expr/readExpr.txt
================================================================================
readExpr
================================================================================

foo = read*("*.txt")

--------------------------------------------------------------------------------

(module
  (classProperty
    (identifier)
    (readGlobExpr
      (parenthesizedExpr
        (slStringLiteral
          (slStringLiteralPart))))))
