corpus/module/moduleHeader5.txt
================================================================================
moduleHeader5
================================================================================

import "foo.pkl"
import "bar.pkl"

--------------------------------------------------------------------------------

(module
  (importClause
    (stringConstant))
  (importClause
    (stringConstant)))
