corpus/module/moduleHeader6.txt
================================================================================
moduleHeader6
================================================================================

import* "foo.pkl"
import* "bar.pkl" as bar

--------------------------------------------------------------------------------

(module
  (importGlobClause
    (stringConstant))
  (importGlobClause
    (stringConstant)
    (identifier)))
