corpus/snippetTests/annotation/annotation2.txt
================================================================================
annotation/annotation2
================================================================================

class NoAnn

@NoAnn
invalidAnnotationOnTypeCheckedProperty = "hi"

--------------------------------------------------------------------------------

(module
  (clazz
    (identifier))
  (classProperty
    (annotation
      (qualifiedIdentifier
        (identifier)))
    (identifier)
    (slStringLiteral)))
